Bug 1544530 - [sync 132] - Fixed Horizontal scrolling in the debugger secondary panel r=jlast
Differential Revision: https://phabricator.services.mozilla.com/D27714

--- a/devtools/client/debugger/src/components/SecondaryPanes/Expressions.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/Expressions.css
@@ -49,6 +49,7 @@
   /* TODO: add normalize */
   margin: 0;
   padding: 4px 0px;
+  overflow-x: auto;
 }
 
 .expression-input-container {
