--- a/devtools/client/debugger/src/components/SecondaryPanes/XHRBreakpoints.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/XHRBreakpoints.css
@@ -2,6 +2,10 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
+.xhr-breakpoints-pane ._content {
+  overflow-x: auto;
+}
+
 .xhr-input-container {
   display: flex;
   border: 1px solid transparent;
